--- a/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
@@ -444,13 +444,13 @@ msgstr "キー/値のペア"
 #: upstream/_guides/deploying-to-kubernetes.adoc:271
 #, fuzzy
 msgid "import all values from a Secret or ConfigMap"
-msgstr "シークレットまたはコンフィグマップからすべての値をインポートする"
+msgstr "シークレットまたはコンフィグマップからすべての値をインポート"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:272
 #, fuzzy
 msgid "interpolate a single value identified by a given field in a Secret or ConfigMap"
-msgstr "Secret または ConfigMap の指定されたフィールドで識別される単一の値を補間する"
+msgstr "Secret または ConfigMap の指定されたフィールドで識別される単一の値を補間します。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:273
