--- a/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
@@ -428,12 +428,12 @@ msgstr "キー/値のペア"
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:271
 msgid "import all values from a Secret or ConfigMap"
-msgstr "Secret または ConfigMap からすべての値をインポート"
+msgstr "Secret または ConfigMap からすべての値をインポートする"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:272
 msgid "interpolate a single value identified by a given field in a Secret or ConfigMap"
-msgstr "Secret または ConfigMap の指定されたフィールドで識別される単一の値を補間します。"
+msgstr "Secret または ConfigMap の指定されたフィールドで識別される単一の値を補間する"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:273
