Add machine translation

--- a/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
@@ -601,18 +601,21 @@ msgstr "両方のレスポンスには、これらのヘッダも含まれてい
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:377
+#, fuzzy
 msgid "Link: < http://example.com/people?page=0&size=2 >; rel=\"first\""
-msgstr ""
+msgstr "リンク: &lt; http://example.com/people?page=0&amp;size=2 http://example.com/people?page=0&amp;size=2 =\"first\""
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:378
+#, fuzzy
 msgid "Link: < http://example.com/people?page=2&size=2 >; rel=\"last\""
-msgstr ""
+msgstr "リンク: &lt; http://example.com/people?page=2&amp;size=2 http://example.com/people?page=2&amp;size=2 =\"last\""
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:379
+#, fuzzy
 msgid "Link: < http://example.com/people?page=1&size=2 >; rel=\"next\""
-msgstr ""
+msgstr "リンク: &lt; http://example.com/people?page=1&amp;size=2 http://example.com/people?page=1&amp;size=2 =\"next\""
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:380
