--- a/l10n/po/ja_JP/_redirects/guides/elytron-properties-guide.md.po
+++ b/l10n/po/ja_JP/_redirects/guides/elytron-properties-guide.md.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_redirects/guides/elytron-properties-guide.md:1
 #, no-wrap
 msgid "/guides/security-properties"
-msgstr ""
+msgstr "/guides/security-properties"
 
 #. type: YAML Front Matter: permalink
 #: upstream/_redirects/guides/elytron-properties-guide.md:1
