--- a/l10n/po/ja_JP/_redirects/guides/vault-guide.md.po
+++ b/l10n/po/ja_JP/_redirects/guides/vault-guide.md.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_redirects/guides/vault-guide.md:1
 #, no-wrap
 msgid "/guides/vault"
-msgstr ""
+msgstr "/guides/vault"
 
 #. type: YAML Front Matter: permalink
 #: upstream/_redirects/guides/vault-guide.md:1
