--- a/l10n/po/ja_JP/security.adoc.po
+++ b/l10n/po/ja_JP/security.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/security.adoc:1
 #, no-wrap
 msgid "security"
-msgstr ""
+msgstr "security"
 
 #. type: YAML Front Matter: permalink
 #: upstream/security.adoc:1
@@ -32,7 +32,7 @@ msgstr ""
 #: upstream/security.adoc:1
 #, no-wrap
 msgid "Security"
-msgstr ""
+msgstr "セキュリティー"
 
 #.     Content copied from https://github.com/quarkusio/quarkus/blob/master/SECURITY.md 
 #.     Edit there too
