--- a/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
@@ -784,8 +784,9 @@ msgstr "`quarkus.openshift.env.mapping.foo.from-configmap=foobar`"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:342
+#, fuzzy
 msgid "If you redefine the same variable using the new syntax while keeping the old syntax, **ONLY** the new version will be kept, and a warning will be issued to alert you of the problem. For example, if you define both `quarkus.openshift.env-vars.my-env-var.value=foobar` and `quarkus.openshift.env.vars.my-env-var=newValue`, the extension will only generate an environment variable `MY_ENV_VAR=newValue` and issue a warning."
-msgstr ""
+msgstr "古い構文を維持したまま新しい構文を使用して同じ変数を再定義した場合、新しいバージョン *のみが*保持され、警告が表示されて問題を警告します。例えば、 `quarkus.openshift.env-vars.my-env-var.value=foobar` と `quarkus.openshift.env.vars.my-env-var=newValue` の両方を定義した場合、拡張モジュールは環境変数 `MY_ENV_VAR=newValue` のみを生成し、警告を発行します。"
 
 #. type: Title ====
 #: upstream/_guides/deploying-to-openshift.adoc:343
@@ -795,13 +796,15 @@ msgstr "ボリュームのマウント"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:346
+#, fuzzy
 msgid "The OpenShift extension allows the user to configure both volumes and mounts for the application."
-msgstr ""
+msgstr "OpenShift拡張機能を使用すると、アプリケーションのボリュームとマウントの両方を設定することができます。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:348
+#, fuzzy
 msgid "Any volume can be mounted with a simple configuration:"
-msgstr ""
+msgstr "どんなボリュームでも、簡単な構成でマウントすることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-openshift.adoc:352
@@ -811,8 +814,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:355
+#, fuzzy
 msgid "This will add a mount to my pod for volume `my-volume` to path `/where/to/mount`"
-msgstr ""
+msgstr "これにより、私のポッドのボリューム `my-volume` のパスにマウントが追加されます。 `/where/to/mount`"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:357
@@ -847,19 +851,21 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/deploying-to-openshift.adoc:372
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Knative - OpenShift Serverless"
-msgstr ""
+msgstr "Knative - OpenShiftサーバーレス"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:375
+#, fuzzy
 msgid "OpenShift also provides the ability to use Knative via the link:https://www.openshift.com/learn/topics/serverless[OpenShift Serverless] functionality."
-msgstr ""
+msgstr "また、OpenShiftでは、OpenShift link:https://www.openshift.com/learn/topics/serverless[Serverless]機能を介してKnativeを利用する機能も提供されています。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:377
+#, fuzzy
 msgid "The first order of business is to instruct Quarkus to generate Knative resources by setting:"
-msgstr ""
+msgstr "まず最初にQuarkusに設定でKnativeのリソースを生成するように指示する。"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-openshift.adoc:381
@@ -869,8 +875,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:385
+#, fuzzy
 msgid "In order to leverage OpenShift S2I to build the container image on the cluster and use the resulting container image for the Knative application, we need to set a couple of configuration properties:"
-msgstr ""
+msgstr "OpenShift S2Iを利用してクラスタ上にコンテナイメージを構築し、その結果のコンテナイメージをKnativeアプリケーションで使用するためには、いくつかの設定プロパティを設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-openshift.adoc:392
@@ -884,5 +891,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:394
+#, fuzzy
 msgid "The application can then be deployed to OpenShift Serverless by enabling the standard `quarkus.kubernetes.deploy=true` property."
-msgstr ""
+msgstr "その後、標準の `quarkus.kubernetes.deploy=true` プロパティを有効にすることで、アプリケーションを OpenShift Serverless にデプロイすることができます。"
