--- a/l10n/po/ja_JP/_guides/microprofile-metrics.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-metrics.adoc.po
@@ -3,25 +3,25 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-02 22:57+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/microprofile-metrics.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - MicroProfile Metrics"
 msgstr "Quarkus - MicroProfile Metrics"
 
@@ -32,27 +32,23 @@ msgstr "このガイドでは、QuarkusアプリケーションがSmallRye Metri
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:15
-#, fuzzy
 msgid "MicroProfile Metrics allows applications to gather various metrics and statistics that provide insights into what is happening inside the application."
-msgstr "MicroProfileメトリクスは、アプリケーションで様々なメトリクスや統計情報を収集して、アプリケーション内で何が起こっているかについての洞察を提供します。"
+msgstr "MicroProfile Metricsは、アプリケーションで様々なメトリクスや統計情報を収集して、アプリケーション内で何が起こっているかについての洞察を提供します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:19
-#, fuzzy
 msgid "The metrics can be read remotely using JSON format or the OpenMetrics format, so that they can be processed by additional tools such as Prometheus, and stored for analysis and visualisation."
 msgstr "このように、JSON 形式または OpenMetrics 形式を使用してメトリクスをリモートで読み取ることができるため、Prometheus などの追加ツールで処理したり、分析や可視化のために保存したりすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:23
-#, fuzzy
 msgid "Apart from application-specific metrics, which are described in this guide, you may also utilize built-in metrics exposed by various Quarkus extensions. These are described in the guide for each particular extension that supports built-in metrics."
-msgstr "このガイドで説明するアプリケーション固有のメトリクスとは別に、Quarkusのさまざまな拡張機能によって公開されているビルトインメトリクスを利用することもできます。これらについては、ビルトインメトリクスをサポートしている各拡張機能のガイドで説明します。"
+msgstr "このガイドで説明するアプリケーション固有のメトリクスとは別に、Quarkusのさまざまなエクステンションによって公開されているビルトインメトリクスを利用することもできます。これらについては、ビルトインメトリクスをサポートしている各エクステンションのガイドで説明します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:26
-#, fuzzy
 msgid "link:micrometer[Micrometer] is the recommended approach to metrics for Quarkus.  Use the MicroProfile Metrics extension when it's required to retain MicroProfile specification compatibility."
-msgstr "link:micrometer[マイクロメーターは] 、Quarkusのメトリクスへの推奨アプローチです。MicroProfile仕様の互換性を維持する必要がある場合は、MicroProfile Metrics拡張機能を使用します。"
+msgstr "link:micrometer[Micrometerは] 、Quarkusのメトリクスへの推奨アプローチです。MicroProfile仕様の互換性を維持する必要がある場合は、MicroProfile Metricsエクステンションを使用します。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:27
@@ -67,7 +63,6 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:32
-#, fuzzy
 msgid "less than 15 minutes"
 msgstr "15分以内"
 
@@ -88,19 +83,18 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:36
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Architecture"
 msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:40
-#, fuzzy
 msgid "In this example, we build a very simple microservice which offers one REST endpoint and that endpoint serves for determining whether a number is prime. The implementation class is annotated with some metric annotations so that while responding to user's requests, some metrics are gathered. The meaning of each metric will be explained later."
-msgstr "この例では、1つのRESTエンドポイントを提供する非常にシンプルなマイクロサービスを構築し、そのエンドポイントは数値が素数であるかどうかを判断するのに役立ちます。実装クラスは、ユーザーのリクエストに応答している間に、いくつかのメトリクスが収集されるように、いくつかのメトリックアノテーションでアノテーションされています。各メトリックの意味は後ほど説明します。"
+msgstr "この例では、1つのRESTエンドポイントを提供する非常にシンプルなマイクロサービスを構築し、そのエンドポイントは数値が素数であるかどうかを判断するのに役立ちます。実装クラスは、ユーザーのリクエストに応答している間に、いくつかのメトリクスが収集されるように、いくつかのメトリックアノテーションが付与されています。各メトリックの意味は後ほど説明します。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:41
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
@@ -116,13 +110,12 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:49
-#, fuzzy
 msgid "The solution is located in the `microprofile-metrics-quickstart` {quickstarts-tree-url}/microprofile-metrics-quickstart[directory]."
 msgstr "ソリューションは `microprofile-metrics-quickstart` {quickstarts-tree-url}/microprofile-metrics-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:50
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -146,15 +139,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:66
-#, fuzzy
 msgid "This command generates a Maven project, importing the `smallrye-metrics` extension which is an implementation of the MicroProfile Metrics specification used in Quarkus."
-msgstr "このコマンドは、Quarkusで使用されているMicroProfile Metrics仕様の実装である `smallrye-metrics` 拡張子をインポートして、Mavenプロジェクトを生成します。"
+msgstr "このコマンドは、Quarkusで使用されているMicroProfile Metrics仕様の実装である `smallrye-metrics` エクステンションをインポートして、Mavenプロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:69
-#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `smallrye-metrics` extension to your project by running the following command in your project base directory:"
-msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `smallrye-metrics` 拡張機能を追加することができます。"
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `smallrye-metrics` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:73
@@ -185,39 +176,33 @@ msgstr "アプリケーションの記述"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:90
-#, fuzzy
 msgid "The application consists of a single class that implements an algorithm for checking whether a number is prime.  This algorithm is exposed over a REST interface. Additionally, we need a few annotations to make sure that our desired metrics are calculated over time and can be exported for manual analysis or processing by additional tooling."
 msgstr "このアプリケーションは、数値が素数であるかどうかをチェックするアルゴリズムを実装した単一のクラスで構成されています。このアルゴリズムは、RESTインターフェースを介して公開されています。さらに、必要なメトリクスが時間の経過とともに計算され、手動分析や追加のツールによる処理のためにエクスポートできることを確認するために、いくつかのアノテーションが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:92
-#, fuzzy
 msgid "The metrics that we will gather are these:"
-msgstr "集めようとしているメトリクスは、このようなものです。"
+msgstr "集めようとしているメトリクスは、以下の通りです："
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:94
 #: upstream/_guides/microprofile-metrics.adoc:212
-#, fuzzy
 msgid "`performedChecks`: A counter which is increased by one each time the user asks about a number."
 msgstr "`performedChecks` : ユーザーが数字を尋ねるたびに1つ増えるカウンター。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:95
 #: upstream/_guides/microprofile-metrics.adoc:213
-#, fuzzy
 msgid "`highestPrimeNumberSoFar`: This is a gauge that stores the highest number that was asked about by the user and which was determined to be prime."
-msgstr "`highestPrimeNumberSoFar` : ユーザーから質問されて素数と判断された最高の数字を保存するゲージです。"
+msgstr "`highestPrimeNumberSoFar` : ユーザーから質問されて素数と判断された最高の数字を保存するゲージ。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:96
-#, fuzzy
 msgid "`checksTimer`: This is a timer, therefore a compound metric that benchmarks how much time the primality tests take. We will explain that one in more details later."
-msgstr "`checksTimer` : これはタイマーであり、したがって、プライマリテストにどれだけの時間がかかるかをベンチマークする複合的なメトリックです。これについては後ほど詳しく説明します。"
+msgstr "`checksTimer` : これはタイマーであり、したがって、プライマリテストにどれだけの時間がかかるかをベンチマークする複合メトリックです。これについては後ほど詳しく説明します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:98
-#, fuzzy
 msgid "The full source code looks like this:"
 msgstr "完全なソースコードは以下のようになります。"
 
@@ -318,27 +303,25 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:156
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running and using the application"
 msgstr "アプリケーションの実行と使用"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:159
-#, fuzzy
 msgid "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`"
 msgstr "マイクロサービスをdevモードで実行するには、次のようにします。 `./mvnw clean compile quarkus:dev`"
 
 #. type: Title ===
 #: upstream/_guides/microprofile-metrics.adoc:160
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Generate some values for the metrics"
 msgstr "メトリクスの値を生成する"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:162
-#, fuzzy
 msgid "First, ask the endpoint whether some numbers are prime numbers."
-msgstr "まず、ある数が素数であるかどうかを終点に問います。"
+msgstr "まず、ある数が素数であるかどうかをエンドポイントに問います。"
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:166
@@ -348,15 +331,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:169
-#, fuzzy
 msgid "The application will respond that 350 is not a prime number because it can be divided by 2."
 msgstr "アプリでは、350は2で割れるので素数ではないと回答します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:171
-#, fuzzy
 msgid "Now for some large prime number so that the test takes a bit more time:"
-msgstr "さて、テストにもう少し時間がかかるように、いくつかの大きな素数のために。"
+msgstr "次に、テストにもう少し時間がかかるように、いくらか大きな素数で実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:175
@@ -366,21 +347,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:179
-#, fuzzy
 msgid "The application will respond that 629521085409773 is a prime number.  If you want, try some more calls with numbers of your choice."
-msgstr "アプリは629521085409773が素数であることを回答します。もしよろしければ、お好きな番号でもう何回か電話をかけてみてください。"
+msgstr "アプリは629521085409773が素数であることを回答します。お好みで、好きな番号でもう何回か呼び出してみてください。"
 
 #. type: Title ===
 #: upstream/_guides/microprofile-metrics.adoc:180
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Review the generated metrics"
 msgstr "生成されたメトリクスを確認する"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:183
-#, fuzzy
 msgid "To view the metrics, execute `curl -H\"Accept: application/json\" localhost:8080/q/metrics/application` You will receive a response such as:"
-msgstr "メトリクスを表示するには、 `curl -H\"Accept: application/json\" localhost:8080/q/metrics/application` を実行すると、次のようなレスポンスが表示されます。"
+msgstr "メトリクスを表示するには、 `curl -H\"Accept: application/json\" localhost:8080/q/metrics/application` を実行します。実行すると次のようなレスポンスが表示されます:"
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:207
@@ -411,61 +390,51 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:210
-#, fuzzy
 msgid "Let's explain the meaning of each metric:"
 msgstr "それぞれのメトリックの意味を説明しましょう。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:214
-#, fuzzy
 msgid "`checksTimer`: This is a timer, therefore a compound metric that benchmarks how much time the primality tests take. All durations are measured in milliseconds. It consists of these values:"
-msgstr "`checksTimer` : これはタイマーであり、したがって、プライマリテストにどれだけの時間がかかるかをベンチマークとする複合メトリックです。すべての持続時間はミリ秒単位で測定されます。これらの値で構成されています。"
+msgstr "`checksTimer` : これはタイマーであり、したがって、プライマリテストにどれだけの時間がかかるかをベンチマークとする複合メトリックです。すべての持続時間はミリ秒単位で測定されます。これらの値で構成されています:"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:215
-#, fuzzy
 msgid "`min`: The shortest duration it took to perform a primality test, probably it was performed for a small number."
-msgstr "`min` : 原始性試験を行うのにかかった時間が最も短く、おそらく少数のために行われたのではないかと思います。"
+msgstr "`min` : 素数チェックを行うのにかかった時間の最短所要時間、おそらく小さな数に対して行われたものではないかと思います。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:216
-#, fuzzy
 msgid "`max`: The longest duration, probably it was with a large prime number."
-msgstr "`max` : 最長持続時間、たぶん大きな素数と一緒だった。"
+msgstr "`max` : 最長所要時間、おそらく大きな素数に対して行われたものです。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:217
-#, fuzzy
 msgid "`mean`: The mean value of the measured durations."
-msgstr "`mean` : 測定された持続時間の平均値。"
+msgstr "`mean` : 計測された所要時間の平均値。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:218
-#, fuzzy
 msgid "`stddev`: The standard deviation."
-msgstr "`stddev` : 標準偏差です。"
+msgstr "`stddev` : 標準偏差。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:219
-#, fuzzy
 msgid "`count`: The number of observations (so it will be the same value as `performedChecks`)."
-msgstr "`count` : オブザベーションの数(だから `performedChecks` と同じ値になります)。"
+msgstr "`count` : 試行回数(なので `performedChecks` と同じ値になります)。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:220
-#, fuzzy
 msgid "`p50, p75, p95, p99, p999`: Percentiles of the durations. For example the value in `p95` means that 95 % of the measurements were faster than this duration."
-msgstr "`p50, p75, p95, p99, p999` : 持続時間のパーセンタイル。例えば、 `p95` の値は、測定の95%がこの持続時間よりも速いことを意味します。"
+msgstr "`p50, p75, p95, p99, p999` : 所要時間のパーセンタイル。例えば、 `p95` の値は、試行の95%がこの所要時間よりも速いことを意味します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:221
-#, fuzzy
 msgid "`meanRate, oneMinRate, fiveMinRate, fifteenMinRate`: Mean throughput and one-, five-, and fifteen-minute exponentially-weighted moving average throughput."
 msgstr "`meanRate, oneMinRate, fiveMinRate, fifteenMinRate` : 平均スループットと 1、5、および 15 分間の指数関数的に加重された移動平均スループット。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:223
-#, fuzzy
 msgid "If you prefer an OpenMetrics export rather than the JSON format, remove the `-H\"Accept: application/json\"` argument from your command line."
 msgstr "JSON形式ではなくOpenMetricsのエクスポートを希望する場合は、コマンドラインから `-H\"Accept: application/json\"` 引数を削除してください。"
 
