Replace extension translation to align wording

--- a/l10n/po/ja_JP/_guides/cdi-integration.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi-integration.adoc.po
@@ -688,7 +688,7 @@ msgstr "ユースケース - 合成オブザーバー"
 #: upstream/_guides/cdi-integration.adoc:332
 #, fuzzy
 msgid "Similar to <<synthetic_beans,synthetic beans>>, the attributes of a synthetic observer method are not derived from a Java method. Instead, all the attributes are defined by an extension."
-msgstr "link:#synthetic_beans[合成ビーンズ] と同様に、合成オブザーバ・メソッドの属性はJavaメソッドから派生したものではありません。その代わり、すべての属性は拡張子によって定義されます。"
+msgstr "link:#synthetic_beans[合成ビーンズ] と同様に、合成オブザーバ・メソッドの属性はJavaメソッドから派生したものではありません。その代わり、すべての属性はエクステンションによって定義されます。"
 
 #. type: delimited block =
 #: upstream/_guides/cdi-integration.adoc:334
