--- a/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
@@ -1037,7 +1037,7 @@ msgstr "は、任意の注入点への注入の対象とはなりません。"
 #: upstream/_guides/cdi-reference.adoc:407
 #, fuzzy
 msgid "is not excluded by any extension,"
-msgstr "は、どのような拡張子を用いても除外されません。"
+msgstr "は、どのようなエクステンションを用いても除外されません。"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:408
