--- a/l10n/po/ja_JP/_guides/cdi.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi.adoc.po
@@ -447,7 +447,7 @@ msgstr "`@javax.enterprise.context.SessionScoped`"
 #: upstream/_guides/cdi.adoc:188
 #, fuzzy, no-wrap
 msgid "This scope is backed by a `javax.servlet.http.HttpSession` object. It's only available if the `quarkus-undertow` extension is used."
-msgstr "このスコープは `javax.servlet.http.HttpSession` オブジェクトによってバックアップされています。 `quarkus-undertow` 拡張子を使用している場合のみ利用可能です。"
+msgstr "このスコープは `javax.servlet.http.HttpSession` オブジェクトによってバックアップされています。 `quarkus-undertow` エクステンションを使用している場合のみ利用可能です。"
 
 #. type: Plain text
 #: upstream/_guides/cdi.adoc:191
