--- a/l10n/po/ja_JP/_guides/centralized-log-management.adoc.po
+++ b/l10n/po/ja_JP/_guides/centralized-log-management.adoc.po
@@ -59,7 +59,7 @@ msgstr "以下の例はすべて、以下の手順で作成できる同じアプ
 #: upstream/_guides/centralized-log-management.adoc:25
 #, fuzzy
 msgid "Create an application with the `quarkus-logging-gelf` extension. You can use the following Maven command to create it:"
-msgstr "`quarkus-logging-gelf` の拡張子を持つアプリケーションを作成します。以下のMavenコマンドを使って作成します。"
+msgstr "`quarkus-logging-gelf` のエクステンションを持つアプリケーションを作成します。以下のMavenコマンドを使って作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:34
