--- a/l10n/po/ja_JP/_guides/consul-config.adoc.po
+++ b/l10n/po/ja_JP/_guides/consul-config.adoc.po
@@ -139,7 +139,7 @@ msgstr ""
 #: upstream/_guides/consul-config.adoc:61
 #, fuzzy
 msgid "This command generates a Maven project with a REST endpoint and imports the `consul-config` extension."
-msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、 `consul-config` 拡張子をインポートします。"
+msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、 `consul-config` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:64
