--- a/l10n/po/ja_JP/_guides/funqy-gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-gcp-functions.adoc.po
@@ -134,7 +134,7 @@ msgstr "Maven デプロイメントプロジェクトの作成"
 #: upstream/_guides/funqy-gcp-functions.adoc:53
 #, fuzzy
 msgid "Create an application with the `quarkus-funqy-google-cloud-functions` extension.  You can use the following Maven command to create it:"
-msgstr "`quarkus-funqy-google-cloud-functions` の拡張子を持つアプリケーションを作成します。以下のMavenコマンドを使って作成します。"
+msgstr "`quarkus-funqy-google-cloud-functions` のエクステンションを持つアプリケーションを作成します。以下のMavenコマンドを使って作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/funqy-gcp-functions.adoc:62
