--- a/l10n/po/ja_JP/_guides/gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/gcp-functions-http.adoc.po
@@ -122,7 +122,7 @@ msgstr "Maven デプロイメントプロジェクトの作成"
 #: upstream/_guides/gcp-functions-http.adoc:46
 #, fuzzy
 msgid "Create an application with the `quarkus-google-cloud-functions-http` extension.  You can use the following Maven command to create it:"
-msgstr "`quarkus-google-cloud-functions-http` の拡張子を持つアプリケーションを作成します。以下のMavenコマンドを使って作成します。"
+msgstr "`quarkus-google-cloud-functions-http` のエクステンションを持つアプリケーションを作成します。以下のMavenコマンドを使って作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/gcp-functions-http.adoc:55
@@ -182,7 +182,7 @@ msgstr "この例のプロジェクトでは、RESTEasy(JAX-RS)、Undertow(Servl
 #: upstream/_guides/gcp-functions-http.adoc:79
 #, fuzzy
 msgid "If you don't need endpoints of each type, you can remove the corresponding extensions from your `pom.xml`."
-msgstr "各タイプのエンドポイントが不要な場合は、対応する拡張子を `pom.xml` ."
+msgstr "各タイプのエンドポイントが不要な場合は、対応するエクステンションを `pom.xml` ."
 
 #. type: Title ===
 #: upstream/_guides/gcp-functions-http.adoc:80
