--- a/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
@@ -47,7 +47,7 @@ msgstr "プロジェクトの設定"
 #: upstream/_guides/grpc-getting-started.adoc:19
 #, fuzzy
 msgid "Edit the `pom.xml` file to add the Quarkus gRPC extension dependency (just under `<dependencies>`):"
-msgstr "`pom.xml` ファイルを編集して、Quarkus gRPC拡張子の依存関係を追加します( `<dependencies>` のすぐ下)。"
+msgstr "`pom.xml` ファイルを編集して、Quarkus gRPCエクステンションの依存関係を追加します( `<dependencies>` のすぐ下)。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-getting-started.adoc:26
@@ -631,7 +631,7 @@ msgstr "gRPC のバージョンと `protoc` のバージョンを設定します
 #: upstream/_guides/grpc-getting-started.adoc:308
 #, fuzzy
 msgid "Then, add to the `build` section the `os-maven-plugin` extension and the `protobuf-maven-plugin` configuration."
-msgstr "そして、 `build` セクションに `os-maven-plugin` の拡張子と `protobuf-maven-plugin` の設定を追加します。"
+msgstr "そして、 `build` セクションに `os-maven-plugin` のエクステンションと `protobuf-maven-plugin` の設定を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-getting-started.adoc:319
