--- a/l10n/po/ja_JP/_guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm-panache.adoc.po
@@ -179,7 +179,7 @@ msgstr "Panache JPA 拡張機能"
 #: upstream/_guides/hibernate-orm-panache.adoc:73
 #, fuzzy
 msgid "your JDBC driver extension (`quarkus-jdbc-postgresql`, `quarkus-jdbc-h2`, `quarkus-jdbc-mariadb`, ...)"
-msgstr "お使いの JDBC ドライバーの拡張子 ( `quarkus-jdbc-postgresql` , `quarkus-jdbc-h2` , `quarkus-jdbc-mariadb` , ...)"
+msgstr "お使いの JDBC ドライバーのエクステンション ( `quarkus-jdbc-postgresql` , `quarkus-jdbc-h2` , `quarkus-jdbc-mariadb` , ...)"
 
 #. type: delimited block -
 #: upstream/_guides/hibernate-orm-panache.adoc:82
