--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -81,13 +81,13 @@ msgstr "以下の依存関係をプロジェクトに追加してください:"
 #: upstream/_guides/hibernate-orm.adoc:31
 #, fuzzy
 msgid "the Hibernate ORM extension: `io.quarkus:quarkus-hibernate-orm`"
-msgstr "Hibernate ORM 拡張機能を使用しています。 `io.quarkus:quarkus-hibernate-orm`"
+msgstr "Hibernate ORM エクステンションを使用しています。 `io.quarkus:quarkus-hibernate-orm`"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:32
 #, fuzzy
 msgid "your JDBC driver extension; the following options are available:"
-msgstr "JDBC ドライバー拡張機能を使用している場合は、以下のオプションを使用できます。"
+msgstr "JDBC ドライバーエクステンションを使用している場合は、以下のオプションを使用できます。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:33
