--- a/l10n/po/ja_JP/_guides/microprofile-graphql.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-graphql.adoc.po
@@ -180,7 +180,7 @@ msgstr ""
 #: upstream/_guides/microprofile-graphql.adoc:79
 #, fuzzy
 msgid "This command generates a Maven project, importing the `smallrye-graphql` extension which is an implementation of the MicroProfile GraphQL specification used in Quarkus."
-msgstr "このコマンドは、Quarkusで使用されているMicroProfile GraphQL仕様の実装である `smallrye-graphql` 拡張子をインポートして、Mavenプロジェクトを生成します。"
+msgstr "このコマンドは、Quarkusで使用されているMicroProfile GraphQL仕様の実装である `smallrye-graphql` エクステンションをインポートして、Mavenプロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-graphql.adoc:82
