--- a/l10n/po/ja_JP/_guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute-reference.adoc.po
@@ -3366,7 +3366,7 @@ msgstr "RESTEasyの統合"
 #: upstream/_guides/qute-reference.adoc:1481
 #, fuzzy
 msgid "If you want to use Qute in your JAX-RS application, then depending on which JAX-RS stack you are using, you'll need to register the proper extension first.  If you are using the traditional `quakus-resteasy` extension, then in your `pom.xml` file, add:"
-msgstr "JAX-RSアプリケーションでQuteを使用したい場合、使用しているJAX-RSスタックによっては、まず適切な拡張子を登録する必要があります。伝統的な `quakus-resteasy` の拡張子を使用している場合は、 `pom.xml` ファイルに追加してください。"
+msgstr "JAX-RSアプリケーションでQuteを使用したい場合、使用しているJAX-RSスタックによっては、まず適切なエクステンションを登録する必要があります。伝統的な `quakus-resteasy` のエクステンションを使用している場合は、 `pom.xml` ファイルに追加してください。"
 
 #. type: delimited block -
 #: upstream/_guides/qute-reference.adoc:1488
@@ -3382,7 +3382,7 @@ msgstr ""
 #: upstream/_guides/qute-reference.adoc:1491
 #, fuzzy
 msgid "If instead you are using RESTEasy Reactive via the `quarkus-resteasy-reactive` extension, then in your `pom.xml` file, add:"
-msgstr "代わりに `quarkus-resteasy-reactive` 拡張子を介して RESTEasy Reactive を使用している場合は、 `pom.xml` ファイルに追加してください。"
+msgstr "代わりに `quarkus-resteasy-reactive` エクステンションを介して RESTEasy Reactive を使用している場合は、 `pom.xml` ファイルに追加してください。"
 
 #. type: delimited block -
 #: upstream/_guides/qute-reference.adoc:1498
