--- a/l10n/po/ja_JP/_guides/reactive-messaging.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-messaging.adoc.po
@@ -71,7 +71,7 @@ msgstr "インストール"
 #: upstream/_guides/reactive-messaging.adoc:27
 #, fuzzy
 msgid "This mechanism uses the Vert.x EventBus, so you need to enable the `vertx` extension to use this feature.  If you are creating a new project, set the `extensions` parameter are follows:"
-msgstr "この仕組みはVert.x EventBusを利用しているので、この機能を利用するには `vertx` 拡張機能を有効にする必要があります。新規プロジェクトを作成する場合は、 `extensions` パラメーターを以下のように設定します。"
+msgstr "この仕組みはVert.x EventBusを利用しているので、この機能を利用するには `vertx` エクステンションを有効にする必要があります。新規プロジェクトを作成する場合は、 `extensions` パラメーターを以下のように設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging.adoc:35
@@ -88,7 +88,7 @@ msgstr ""
 #: upstream/_guides/reactive-messaging.adoc:39
 #, fuzzy
 msgid "If you have an already created project, the `vertx` extension can be added to an existing Quarkus project with the `add-extension` command:"
-msgstr "すでに作成済みのプロジェクトがある場合は、 `vertx` 拡張機能を既存のQuarkusプロジェクトに `add-extension` コマンドで追加することができます。"
+msgstr "すでに作成済みのプロジェクトがある場合は、 `vertx` エクステンションを既存のQuarkusプロジェクトに `add-extension` コマンドで追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging.adoc:43
