--- a/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
@@ -67,7 +67,7 @@ msgstr "このガイドでは、 *PostgreSQL* に格納されたデータをREST
 #: upstream/_guides/reactive-sql-clients.adoc:21
 #, fuzzy
 msgid "Extension and connection pool class names for each client can be found at the bottom of this document."
-msgstr "各クライアントの拡張子と接続プールのクラス名は、このドキュメントの下部に記載されています。"
+msgstr "各クライアントのエクステンションと接続プールのクラス名は、このドキュメントの下部に記載されています。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:23
@@ -157,7 +157,7 @@ msgstr "Reactive PostgreSQLクライアント拡張"
 #: upstream/_guides/reactive-sql-clients.adoc:64
 #, fuzzy
 msgid "First, make sure your project has the `quarkus-reactive-pg-client` extension enabled.  If you are creating a new project, set the `extensions` parameter as follows:"
-msgstr "まず、プロジェクトで `quarkus-reactive-pg-client` の拡張子が有効になっていることを確認します。新しいプロジェクトを作成する場合は、 `extensions` パラメーターを以下のように設定します。"
+msgstr "まず、プロジェクトで `quarkus-reactive-pg-client` のエクステンションが有効になっていることを確認します。新しいプロジェクトを作成する場合は、 `extensions` パラメーターを以下のように設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-sql-clients.adoc:74
@@ -234,7 +234,7 @@ msgstr "JSON バインディング"
 #: upstream/_guides/reactive-sql-clients.adoc:112
 #, fuzzy
 msgid "We will expose `Fruit` instances over HTTP in the JSON format.  Consequently, you also need to add the `quarkus-resteasy-jackson` extension:"
-msgstr "JSON 形式で HTTP 経由で `Fruit` インスタンスを公開します。その結果、 `quarkus-resteasy-jackson` の拡張子も追加する必要があります。"
+msgstr "JSON 形式で HTTP 経由で `Fruit` インスタンスを公開します。その結果、 `quarkus-resteasy-jackson` のエクステンションも追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-sql-clients.adoc:116
@@ -903,7 +903,7 @@ msgstr "データベース"
 #: upstream/_guides/reactive-sql-clients.adoc:472
 #, fuzzy, no-wrap
 msgid "Extension name"
-msgstr "拡張子名"
+msgstr "エクステンション名"
 
 #. type: Table
 #: upstream/_guides/reactive-sql-clients.adoc:474
