--- a/l10n/po/ja_JP/_guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client.adoc.po
@@ -114,7 +114,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:49
 msgid "This command generates the Maven project with a REST endpoint and imports:"
-msgstr "このコマンドは、REST エンドポイントを持つ Maven プロジェクトを生成し、 `rest-client` と `resteasy-jackson` の拡張子をインポートします。"
+msgstr "このコマンドは、REST エンドポイントを持つ Maven プロジェクトを生成し、 `rest-client` と `resteasy-jackson` のエクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:51
@@ -129,7 +129,7 @@ msgstr "REST クライアントのサポートのために `rest-client` と `re
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:55
 msgid "If you already have your Quarkus project configured, you can add the `rest-client` and the `rest-client-jackson` extensions to your project by running the following command in your project base directory:"
-msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、 `rest-client` と `rest-client-jackson` の拡張子をプロジェクトに追加することができます。"
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、 `rest-client` と `rest-client-jackson` のエクステンションをプロジェクトに追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client.adoc:59
