--- a/l10n/po/ja_JP/_guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-json.adoc.po
@@ -341,7 +341,7 @@ msgstr "実装は非常に簡単で、JAX-RSのアノテーションを使って
 #. type: Plain text
 #: upstream/_guides/rest-json.adoc:170
 msgid "The `Fruit` objects will be automatically serialized/deserialized by http://json-b.net/[JSON-B] or https://github.com/FasterXML/jackson[Jackson], depending on the extension you chose when initializing the project."
-msgstr "`Fruit` オブジェクトは、プロジェクトの初期化時に選択した拡張子に応じて、 link:http://json-b.net/[JSON-B] または link:https://github.com/FasterXML/jackson[Jackson] によって自動的にシリアライズ/デシリアライズされます。"
+msgstr "`Fruit` オブジェクトは、プロジェクトの初期化時に選択したエクステンションに応じて、 link:http://json-b.net/[JSON-B] または link:https://github.com/FasterXML/jackson[Jackson] によって自動的にシリアライズ/デシリアライズされます。"
 
 #. type: delimited block =
 #: upstream/_guides/rest-json.adoc:177
