--- a/l10n/po/ja_JP/_guides/scheduler.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler.adoc.po
@@ -33,7 +33,7 @@ msgstr "最近のアプリケーションでは、定期的に特定のタスク
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:14
 msgid "If you need a clustered scheduler use the link:quartz[Quartz extension]."
-msgstr "クラスター化されたスケジューラーが必要な場合は、 link:quartz[Quartz拡張機能] を使用してください。"
+msgstr "クラスター化されたスケジューラーが必要な場合は、 link:quartz[Quartzエクステンション] を使用してください。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:15
