--- a/l10n/po/ja_JP/_guides/security-jpa.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jpa.adoc.po
@@ -369,7 +369,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:208
 msgid "The `security-jpa` extension is only initialized if there is a single entity annotated with `@UserDefinition`."
-msgstr "`security-jpa` 拡張子は、 `@UserDefinition` でアノテーションされた単一のエンティティーがある場合にのみ初期化されます。"
+msgstr "`security-jpa` エクステンションは、 `@UserDefinition` でアノテーションされた単一のエンティティーがある場合にのみ初期化されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:210
