--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -88,13 +88,13 @@ msgstr ""
 #: upstream/_guides/security-jwt.adoc:42
 #, fuzzy
 msgid "This command generates the Maven project with a REST endpoint and imports the `smallrye-jwt` extension, which includes the {mp-jwt} support."
-msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、{mp-jwt}サポートを含む `smallrye-jwt` 拡張機能をインポートします。"
+msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、{mp-jwt}サポートを含む `smallrye-jwt` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:45
 #, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `smallrye-jwt` extension to your project by running the following command in your project base directory:"
-msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `smallrye-jwt` 拡張機能を追加することができます。"
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `smallrye-jwt` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt.adoc:49
@@ -612,13 +612,13 @@ msgstr ""
 #: upstream/_guides/security-jwt.adoc:301
 #, fuzzy
 msgid "Excellent, we have not provided any JWT in the request, so we should not be able to access the endpoint, and we were not. Instead we received an HTTP 401 Unauthorized error. We need to obtain and pass in a valid JWT to access that endpoint. There are two steps to this, 1) configuring our {extension-name} extension with information on how to validate a JWT, and 2) generating a matching JWT with the appropriate claims."
-msgstr "素晴らしい、リクエストにJWTを提供していないので、エンドポイントにアクセスできないはずなのですが、そうではありませんでした。代わりにHTTP 401 Unauthorizedエラーを受信しました。そのエンドポイントにアクセスするには、有効なJWTを取得して渡す必要があります。これには2つのステップがあります。1) JWTの検証方法に関する情報を持つ{extension-name}拡張機能を設定すること、そして2) 適切なクレームを持つマッチするJWTを生成することです。"
+msgstr "素晴らしい、リクエストにJWTを提供していないので、エンドポイントにアクセスできないはずなのですが、そうではありませんでした。代わりにHTTP 401 Unauthorizedエラーを受信しました。そのエンドポイントにアクセスするには、有効なJWTを取得して渡す必要があります。これには2つのステップがあります。1) JWTの検証方法に関する情報を持つ{extension-name}エクステンションを設定すること、そして2) 適切なクレームを持つマッチするJWTを生成することです。"
 
 #. type: Title ===
 #: upstream/_guides/security-jwt.adoc:302
 #, fuzzy, no-wrap
 msgid "Configuring the {extension-name} Extension Security Information"
-msgstr "拡張子名}拡張子セキュリティー情報の設定"
+msgstr "エクステンション名}エクステンションセキュリティー情報の設定"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:305
@@ -1171,7 +1171,7 @@ msgstr "解決策を探る"
 #: upstream/_guides/security-jwt.adoc:630
 #, fuzzy
 msgid "The solution repository located in the `security-jwt-quickstart` {quickstarts-tree-url}/security-jwt-quickstart[directory] contains all of the versions we have worked through in this quickstart guide as well as some additional endpoints that illustrate subresources with injection of ``JsonWebToken``s and their claims into those using the CDI APIs. We suggest that you check out the quickstart solutions and explore the `security-jwt-quickstart` directory to learn more about the {extension-name} extension features."
-msgstr "`security-jwt-quickstart` {quickstarts-tree-url}/security-jwt-quickstart[directory]にあるソリューションリポジトリには、このクイックスタートガイドで扱ったすべてのバージョンと、CDI APIを使用しているものへの `JsonWebToken` のインジェクションとその主張を持つサブリソースを示す追加のエンドポイントが含まれています。クイックスタートのソリューションをチェックアウトし、 `security-jwt-quickstart` ディレクトリーを探索して {extension-name} 拡張機能についての詳細を学ぶことをお勧めします。"
+msgstr "`security-jwt-quickstart` {quickstarts-tree-url}/security-jwt-quickstart[directory]にあるソリューションリポジトリには、このクイックスタートガイドで扱ったすべてのバージョンと、CDI APIを使用しているものへの `JsonWebToken` のインジェクションとその主張を持つサブリソースを示す追加のエンドポイントが含まれています。クイックスタートのソリューションをチェックアウトし、 `security-jwt-quickstart` ディレクトリーを探索して {extension-name} エクステンションについての詳細を学ぶことをお勧めします。"
 
 #. type: Title ==
 #: upstream/_guides/security-jwt.adoc:632
