--- a/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
@@ -212,7 +212,7 @@ msgstr "このコマンドは、Quarkusアプリケーション用のKeycloakア
 #: upstream/_guides/security-keycloak-authorization.adoc:85
 #, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `oidc` and `keycloak-authorization` extensions to your project by running the following command in your project base directory:"
-msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで次のコマンドを実行することで、 `oidc` と `keycloak-authorization` の拡張子をプロジェクトに追加できます。"
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで次のコマンドを実行することで、 `oidc` と `keycloak-authorization` のエクステンションをプロジェクトに追加できます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-keycloak-authorization.adoc:89
