--- a/l10n/po/ja_JP/_guides/security-ldap.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-ldap.adoc.po
@@ -144,7 +144,7 @@ msgstr ""
 #: upstream/_guides/security-ldap.adoc:59
 #, fuzzy
 msgid "This command generates a Maven project, importing the `elytron-security-ldap` extension which is a `wildfly-elytron-realm-ldap` adapter for Quarkus applications."
-msgstr "このコマンドは、 `elytron-security-ldap` の拡張子をインポートして Maven プロジェクトを生成します。 link:https://docs.wildfly.org/19/WildFly_Elytron_Security.html#ldap-security-realm[`wildfly-elytron-realm-ldap`] Quarkusアプリケーション用のアダプターです。"
+msgstr "このコマンドは、 `elytron-security-ldap` のエクステンションをインポートして Maven プロジェクトを生成します。 link:https://docs.wildfly.org/19/WildFly_Elytron_Security.html#ldap-security-realm[`wildfly-elytron-realm-ldap`] Quarkusアプリケーション用のアダプターです。"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:62
