--- a/l10n/po/ja_JP/_guides/sending-emails.adoc.po
+++ b/l10n/po/ja_JP/_guides/sending-emails.adoc.po
@@ -113,7 +113,7 @@ msgstr ""
 #: upstream/_guides/sending-emails.adoc:41
 #, fuzzy
 msgid "If you already have an existing project, add the `mailer` extension:"
-msgstr "既存のプロジェクトがある場合は、 `mailer` の拡張子を追加してください。"
+msgstr "既存のプロジェクトがある場合は、 `mailer` のエクステンションを追加してください。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:45
