--- a/l10n/po/ja_JP/_guides/spring-data-jpa.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-data-jpa.adoc.po
@@ -113,7 +113,7 @@ msgstr ""
 #: upstream/_guides/spring-data-jpa.adoc:50
 #, fuzzy
 msgid "This command generates a Maven project with a REST endpoint and imports the `spring-data-jpa` extension."
-msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、 `spring-data-jpa` 拡張子をインポートします。"
+msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、 `spring-data-jpa` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/spring-data-jpa.adoc:53
