--- a/l10n/po/ja_JP/_posts/2019-06-18-hibernate-search-extension.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-06-18-hibernate-search-extension.adoc.po
@@ -110,7 +110,7 @@ msgstr "簡単にはいかない。"
 #: upstream/_posts/2019-06-18-hibernate-search-extension.adoc:34
 #, fuzzy
 msgid "First, add the `quarkus-hibernate-search-elasticsearch` extension to your Quarkus application:"
-msgstr "まず、Quarkusアプリケーションに `quarkus-hibernate-search-elasticsearch` 拡張子を追加します。"
+msgstr "まず、Quarkusアプリケーションに `quarkus-hibernate-search-elasticsearch` エクステンションを追加します。"
 
 #. type: delimited block -
 #: upstream/_posts/2019-06-18-hibernate-search-extension.adoc:38
