--- a/l10n/po/ja_JP/_posts/2019-09-23-quarkus-developer-joy-for-vs-code.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-09-23-quarkus-developer-joy-for-vs-code.adoc.po
@@ -310,7 +310,7 @@ msgstr "application.properties のホバーとドキュメント"
 #: upstream/_posts/2019-09-23-quarkus-developer-joy-for-vs-code.adoc:128
 #, fuzzy
 msgid "The ability to hover over property keys makes it easy to view the property’s documentation.  The documentation provides the property key’s value type, default value (if it exists), phase (whether the property applies at Quarkus runtime or build time), and the extension name."
-msgstr "プロパティーキーの上にカーソルを置くと、プロパティーのドキュメントを簡単に表示することができます。ドキュメントには、プロパティーキーの値の型、デフォルト値(存在する場合)、フェーズ(そのプロパティーがQuarkusの実行時に適用されるか、ビルド時に適用されるか)、拡張子の名前が記載されています。"
+msgstr "プロパティーキーの上にカーソルを置くと、プロパティーのドキュメントを簡単に表示することができます。ドキュメントには、プロパティーキーの値の型、デフォルト値(存在する場合)、フェーズ(そのプロパティーがQuarkusの実行時に適用されるか、ビルド時に適用されるか)、エクステンションの名前が記載されています。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2019-09-23-quarkus-developer-joy-for-vs-code.adoc:129
