--- a/l10n/po/ja_JP/_posts/2020-01-21-march-of-ides.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-01-21-march-of-ides.adoc.po
@@ -163,7 +163,7 @@ msgstr "説明"
 #: upstream/_posts/2020-01-21-march-of-ides.adoc:54
 #, fuzzy, no-wrap
 msgid "Visual Studio Code extension to install using the marketplace"
-msgstr "マーケットプレイスを使用してインストールするVisual Studioのコード拡張機能"
+msgstr "マーケットプレイスを使用してインストールするVisual Studioのコードエクステンション"
 
 #. type: Table
 #: upstream/_posts/2020-01-21-march-of-ides.adoc:55
