--- a/l10n/po/ja_JP/_posts/2020-09-22-kafka-avro.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-09-22-kafka-avro.adoc.po
@@ -75,7 +75,7 @@ msgstr "開始方法"
 #: upstream/_posts/2020-09-22-kafka-avro.adoc:27
 #, fuzzy
 msgid "Well, let's start from the beginning.  Go to https://code.quarkus.io to create your project, and select the following extension:"
-msgstr "さて、まずは最初からやってみましょう。 https://code.quarkus.io にアクセスしてプロジェクトを作成し、以下の拡張子を選択します。"
+msgstr "さて、まずは最初からやってみましょう。 https://code.quarkus.io にアクセスしてプロジェクトを作成し、以下のエクステンションを選択します。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-22-kafka-avro.adoc:29
