--- a/l10n/po/ja_JP/_posts/2020-10-20-kafka-failure-strategy.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-20-kafka-failure-strategy.adoc.po
@@ -112,7 +112,7 @@ msgstr "フェイルファスト」戦略"
 #: upstream/_posts/2020-10-20-kafka-failure-strategy.adoc:52
 #, fuzzy
 msgid "The first strategy is the simplest, but not sure we can qualify it with \"smoothly.\" It's the default strategy.  As soon as a message is nacked, the connector reports the failure, and the application stops.  If you use the health checks extension, the application is marked as unhealthy, and your orchestrator may restart the application."
-msgstr "最初の戦略が一番簡単だが\"スムーズに\"とは言えないなこれがデフォルトの戦略です。メッセージが nacked されるとすぐに、コネクタは失敗を報告し、アプリケーションは停止します。ヘルスチェック拡張機能を使用している場合、アプリケーションは不健康なものとしてマークされ、オーケストレータはアプリケーションを再起動するかもしれません。"
+msgstr "最初の戦略が一番簡単だが\"スムーズに\"とは言えないなこれがデフォルトの戦略です。メッセージが nacked されるとすぐに、コネクタは失敗を報告し、アプリケーションは停止します。ヘルスチェックエクステンションを使用している場合、アプリケーションは不健康なものとしてマークされ、オーケストレータはアプリケーションを再起動するかもしれません。"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-20-kafka-failure-strategy.adoc:54
