--- a/l10n/po/ja_JP/_posts/2020-10-27-experimental_graphql.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-27-experimental_graphql.adoc.po
@@ -469,7 +469,7 @@ msgstr "もう一つ、定期的に出てくる質問は、エンドポイント
 #: upstream/_posts/2020-10-27-experimental_graphql.adoc:232
 #, fuzzy
 msgid "You can just use the caching that comes with Quarkus! Simply include the cache extension:"
-msgstr "Quarkusに付属のキャッシュを使用するだけです。キャッシュ拡張子を含めるだけです。"
+msgstr "Quarkusに付属のキャッシュを使用するだけです。キャッシュエクステンションを含めるだけです。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-10-27-experimental_graphql.adoc:239
