--- a/l10n/po/ja_JP/_posts/insights_0_transcription.adoc.po
+++ b/l10n/po/ja_JP/_posts/insights_0_transcription.adoc.po
@@ -260,7 +260,7 @@ msgstr "link:http://www.youtube.com/watch?v=YKm8rVzLhNE&t=08m39s[08:39:]"
 #: upstream/_posts/insights_0_transcription.adoc:82
 #, fuzzy, no-wrap
 msgid "**Max**: Are you going through all the extensions we have or?\n"
-msgstr "*マックス* : 拡張子を全部調べているのか、それとも?"
+msgstr "*マックス* : エクステンションを全部調べているのか、それとも?"
 
 #. type: Plain text
 #: upstream/_posts/insights_0_transcription.adoc:84
@@ -326,7 +326,7 @@ msgstr "最後に持っていたのがcode.quarkus.ioだったのは、APIを取
 #: upstream/_posts/insights_0_transcription.adoc:104
 #, fuzzy
 msgid "So we could definitely do that. Georgio asks: \"How to write an extension?\". So that one I would be kind of scared to get started on, but if you wanna be the interviewee on that say Maybe yes cute things."
-msgstr "だから、僕らは絶対にそうすることができるんだ。ジョルジオが尋ねる。\"拡張子の書き方は?\"と聞かれたので、それはちょっと怖くて始められませんでしたが、もしあなたがインタビュイーになりたいのであれば、「はい、かわいいものですね」と言ってください。"
+msgstr "だから、僕らは絶対にそうすることができるんだ。ジョルジオが尋ねる。\"エクステンションの書き方は?\"と聞かれたので、それはちょっと怖くて始められませんでしたが、もしあなたがインタビュイーになりたいのであれば、「はい、かわいいものですね」と言ってください。"
 
 #. type: Plain text
 #: upstream/_posts/insights_0_transcription.adoc:106
@@ -476,7 +476,7 @@ msgstr "link:http://www.youtube.com/watch?v=YKm8rVzLhNE&t=16m24s[16:24:]"
 #: upstream/_posts/insights_0_transcription.adoc:154
 #, fuzzy
 msgid "So question: is it possible to expose a Reactive API and blocking API together and is a Quarkus Couchbase extensions in available? So the first one is yes, we usually try and have the blocking and the non-blocking API and try to have them somewhat similar when it makes sense for data, for example, it doesn't necessarily make sense, but we'll definitely try. Couchbase, we haven't seen an extension being offered or even thought of but we can definitely add that. So you can go to. Aha... Let me use this new magic stuff, a magic stuff. There we go, where is my, so if you go to github.com/quarkusio, then you should know how to type properly then you don't end up in Google. Then you can go to Quarkus and then open an issue."
-msgstr "だから質問:それはReactive APIとブロッキングAPIを一緒に公開することが可能であり、利用可能なQuarkus Couchbaseの拡張機能ですか?だから最初の1つはイエスです、我々は通常、試してみて、ブロッキングと非ブロッキングAPIを持っており、それがデータのために意味を成すときに、それらが多少似ているようにしようとすると、例えば、それは必ずしも意味を成すとは限りませんが、我々は間違いなく試してみます。Couchbase、我々は提供されている拡張機能を見ていないか、あるいは考えてもいないが、我々は間違いなくそれを追加することができます。ということで、行ってみてください。この新しい魔法の道具、魔法の道具を使わせてください。github.com/quarkusioに行けば、適切な入力方法を知っていれば、Googleで終わることはありません。それから、Quarkusに行って、問題を開くことができます。"
+msgstr "だから質問:それはReactive APIとブロッキングAPIを一緒に公開することが可能であり、利用可能なQuarkus Couchbaseのエクステンションですか?だから最初の1つはイエスです、我々は通常、試してみて、ブロッキングと非ブロッキングAPIを持っており、それがデータのために意味を成すときに、それらが多少似ているようにしようとすると、例えば、それは必ずしも意味を成すとは限りませんが、我々は間違いなく試してみます。Couchbase、我々は提供されているエクステンションを見ていないか、あるいは考えてもいないが、我々は間違いなくそれを追加することができます。ということで、行ってみてください。この新しい魔法の道具、魔法の道具を使わせてください。github.com/quarkusioに行けば、適切な入力方法を知っていれば、Googleで終わることはありません。それから、Quarkusに行って、問題を開くことができます。"
 
 #. type: Plain text
 #: upstream/_posts/insights_0_transcription.adoc:156
@@ -488,7 +488,7 @@ msgstr "link:http://www.youtube.com/watch?v=YKm8rVzLhNE&t=17m45s[17:45:]"
 #: upstream/_posts/insights_0_transcription.adoc:158
 #, fuzzy
 msgid "And one of the issues is like open an extension request, and then you can ask for Couchbase one and people vote up and maybe somebody is interested, and then we can go for it and get it there. So if you look for I think label, there is a label extension. Yeah, extension proposal. You see here all of the extensions proposal that I've been required or as for it doesn't mean that we'll be done, but if somebody from anywhere wants to give it a try. We tried as much as we can to help you to get started."
-msgstr "そして、問題の一つは、拡張要求を開くようなものであり、その後、あなたはCouchbaseの1を求めることができ、人々は上に投票し、多分誰かが興味を持っているし、我々はそれのために行くことができ、そこにそれを取得します。だから、あなたは私が思うラベルを探している場合は、ラベルの拡張子があります。うん、拡張子の提案。ここにあるのは、私が必要とされている拡張提案のすべてを見てください。私たちはあなたが始められるように、できる限りのことをしました。"
+msgstr "そして、問題の一つは、拡張要求を開くようなものであり、その後、あなたはCouchbaseの1を求めることができ、人々は上に投票し、多分誰かが興味を持っているし、我々はそれのために行くことができ、そこにそれを取得します。だから、あなたは私が思うラベルを探している場合は、ラベルのエクステンションがあります。うん、エクステンションの提案。ここにあるのは、私が必要とされている拡張提案のすべてを見てください。私たちはあなたが始められるように、できる限りのことをしました。"
 
 #. type: Plain text
 #: upstream/_posts/insights_0_transcription.adoc:160
