--- a/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
@@ -360,7 +360,7 @@ msgstr "Quarkusは、API link:https://github.com/OAI/OpenAPI-Specification/blob/
 #: upstream/_guides/openapi-swaggerui.adoc:180
 #, fuzzy
 msgid "You just need to add the `openapi` extension to your Quarkus application:"
-msgstr "Quarkusアプリケーションに `openapi` の拡張子を追加するだけです。"
+msgstr "Quarkusアプリケーションに `openapi` のエクステンションを追加するだけです。"
 
 #. type: delimited block -
 #: upstream/_guides/openapi-swaggerui.adoc:184
