--- a/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
@@ -113,7 +113,7 @@ msgstr ""
 #: upstream/_guides/spring-boot-properties.adoc:50
 #, fuzzy
 msgid "This command generates a Maven project with a REST endpoint and imports the `spring-boot-properties` extension."
-msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、 `spring-boot-properties` 拡張子をインポートします。"
+msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、 `spring-boot-properties` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:53
