--- a/l10n/po/ja_JP/_posts/2019-09-26-quarkus-0-23-1-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-09-26-quarkus-0-23-1-released.adoc.po
@@ -148,7 +148,7 @@ msgstr "MariaDBのサポートを優先していたため、MySQLのサポート
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:53
 #, fuzzy
 msgid "As good news never come alone, it's not one extension we added but two:"
-msgstr "良いニュースは決して一人では来ないように、それは私たちが追加した1つの拡張子ではなく、2つの拡張子です。"
+msgstr "良いニュースは決して一人では来ないように、それは私たちが追加した1つのエクステンションではなく、2つのエクステンションです。"
 
 #. type: Plain text
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:55
@@ -262,7 +262,7 @@ msgstr "Scala サポート"
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:85
 #, fuzzy
 msgid "Together with Java and Kotlin, we now also support Scala. Just add the `quarkus-scala` extension when creating a new project (using https://code.quarkus.io/[code.quarkus.io] or the command line) and you will get a Scala project."
-msgstr "JavaとKotlinと合わせて、Scalaもサポートしています。新しいプロジェクトを作成する際に( `quarkus-scala` )拡張子を追加するだけで( link:https://code.quarkus.io/[code.quarkus.io] またはコマンドラインを使用して)、Scalaプロジェクトが作成されます。"
+msgstr "JavaとKotlinと合わせて、Scalaもサポートしています。新しいプロジェクトを作成する際に( `quarkus-scala` )エクステンションを追加するだけで( link:https://code.quarkus.io/[code.quarkus.io] またはコマンドラインを使用して)、Scalaプロジェクトが作成されます。"
 
 #. type: Title ===
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:86
