--- a/l10n/po/ja_JP/_posts/2020-06-23-supersonic-subatomic-graphql.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-06-23-supersonic-subatomic-graphql.adoc.po
@@ -220,7 +220,7 @@ msgstr ""
 #: upstream/_posts/2020-06-23-supersonic-subatomic-graphql.adoc:75
 #, fuzzy
 msgid "At the moment, the example application created is a JAX-RS application. There is https://github.com/quarkusio/quarkus/issues/8134[some work in progress] to allow extensions to define custom examples application, but until then we always get a JAX-RS application. You can remove the `quarkus-resteasy` dependency as we do not need JAX-RS."
-msgstr "現時点では、作成されたサンプルアプリケーションはJAX-RSアプリケーションです。拡張機能でカスタムサンプルアプリケーションを定義できるようにするための link:https://github.com/quarkusio/quarkus/issues/8134[作業が進行中] ですが、それまでは常にJAX-RSアプリケーションを取得しています。JAX-RSを必要としないので、 `quarkus-resteasy` の依存関係を削除することができます。"
+msgstr "現時点では、作成されたサンプルアプリケーションはJAX-RSアプリケーションです。エクステンションでカスタムサンプルアプリケーションを定義できるようにするための link:https://github.com/quarkusio/quarkus/issues/8134[作業が進行中] ですが、それまでは常にJAX-RSアプリケーションを取得しています。JAX-RSを必要としないので、 `quarkus-resteasy` の依存関係を削除することができます。"
 
 #. type: Title ==
 #: upstream/_posts/2020-06-23-supersonic-subatomic-graphql.adoc:77
